Fix overflow

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -1002,6 +1002,7 @@ input.mobile-facets__checkbox {
 
   .facets-vertical .facets__header {
     border-bottom: 0;
+    position: initial;
   }
   
   .facets-vertical .facets__disclosure {
